chore: Add manager page and update 404 page

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +7,17 @@
     <link rel="stylesheet" href=".\css\bootstrap.min.css">
 </head>
 <body>
-    <nav class="navbar bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-          <a class="navbar-brand text-primary" href="#">
-            <img src=".\assets\hanna-instruments-logo-vector.svg" alt="Logo" width="60" height="50" class="d-inline-block align-text-top">
-            Gestor de consumibles ST
-          </a>
+          <a class="navbar-brand" href="/">Gestor de consumibles</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+              <a class="nav-link" href="/manager">Añadir consumibles</a>
+            </div>
+          </div>
         </div>
       </nav>
