--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,7 @@
             </h2>
             <h3 class="h2 mb-2">Oops! Estas perdido</h3>
             <p class="mb-5">La pagina que estas buscando no fue encontrada</p>
-            <a class="btn bsb-btn-5xl btn-dark rounded-pill px-5 fs-6 m-0" href="/" role="button">Back to Home</a>
+            <a class="btn bsb-btn-5xl btn-dark rounded-pill px-5 fs-6 m-0" href="/" role="button">Volver a inicio</a>
           </div>
         </div>
       </div>
