--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,34 @@
 <%- include("templates/header", {Titulo: "Inicio"}) %>
+<div class="container my-5">
+  <form>
+    <div class="alert alert-info" role="alert">
+      Seleccione los consumibles utilizados
+    </div>
 
-<h1>Hola mundo</h1>
-
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        value=""
+        id="flexCheckDefault"
+      />
+      <label class="form-check-label" for="flexCheckDefault">
+        Default checkbox
+      </label>
+    </div>
+    <div class="form-check">
+      <input
+        class="form-check-input"
+        type="checkbox"
+        value=""
+        id="flexCheckChecked"
+        checked
+      />
+      <label class="form-check-label" for="flexCheckChecked">
+        Checked checkbox
+      </label>
+    </div>
+    <button type="button" class="btn btn-primary">Cargar</button>
+  </form>
+</div>
 <%- include("templates/footer") %>
